kasane-macros/tests/fail/component_uncovered_field.stderr
error: component reads `state.cursor_count` which requires DirtyFlags::BUFFER_CURSOR, but deps() only declares [STATUS]. Add `BUFFER_CURSOR` to deps(), `cursor_count` to stable(), or `cursor_count` to allow()
 --> tests/fail/component_uncovered_field.rs:6:4
  |
6 | fn bad_component(state: &AppState) -> String {
  |    ^^^^^^^^^^^^^

warning: unused import: `kasane_core::state::AppState`
 --> tests/fail/component_uncovered_field.rs:2:5
  |
2 | use kasane_core::state::AppState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
